crates/musq/tests/trybuild/fail_codec.rs
use musq::Codec;

#[derive(Codec)]
struct Bad { a: i32 }

fn main() {}
